deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: split-bill-fe-service
spec:
  selector:
    app: split-bill-fe
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
