deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: split-bill-fe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: splitbill.dta32.my.id
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: split-bill-fe-service
                  port:
                    number: 80
